
2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_version): msgid change moving URLs to parameter
	  per gettext-guidelines
	* common.h: version defines to 3.2.0

2020-12-18  Simon Sobisch <simonsobisch@gnu.org>

	FR #397: add support for JSON GENERATE anonymous JSON objects
	* mlio.c (generate_json_from_tree): handle OMITTED NAME attribute

2020-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (libcob_la_LDFLAGS): updated version-info

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, fileio.c, intrinsic.c: removed unused include sys/timeb.h and
	  definitions for timeb and ftime
	* termio.c (setup_lvlwrk_and_dump_null_adrs): handle level 0 as INDEX

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: preprocessor check/define for S_ISDIR and S_ISREG now done
	  for all compilers

2020-11-30  Ron Norman <rjn@inglenet.com>

	* common.c (cob_check_version): rewrote as it did not work on some platforms

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c, common.h (cob_dump_field): adjusted variable types to unsigned
	* termio.c, common.h (cob_dump_field): compat version for 3.1rc1
	* termio.c (cob_dump_field): extracted setup_lvlwrk_and_dump_null_adrs and
	  setup_varname_with_indices into separate functions and call them only
	  if not skipped because of same data
	* termio.c (cob_dump_field): fixes for non-standard 01 OCCURS for "same as"
	* termio.c (cob_dump_field): postpone output of "same as" to gather multiple
	  identical entries into the same line as "XYZ (1,2..20) same as (1)"

2020-11-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: limit sscanf width for strings
	* common.c (set_config_val): removed duplicate check for
	  ptr (!= 0 && == ' ')